--- a/PROYECTO MercadoLiebre/package.json
+++ b/PROYECTO MercadoLiebre/package.json
@@ -2,9 +2,10 @@
   "name": "ejercitacion",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "npx nodemon app",
+    "start": "node app"
   },
   "keywords": [],
   "author": "",
